--- a/food/templates/index.html
+++ b/food/templates/index.html
@@ -14,7 +14,7 @@
 
 			<ul class="list-group">
 				<li class="list-group-item bg-light">
-					<a href="{% url 'details' item.id %}">{{item.item_name}} : ${{item.item_price}}</a>
+					<a href="{% url 'food:details' item.id %}">{{item.item_name}} : ${{item.item_price}}</a>
 				</li>
 			</ul>
 
