--- a/food/templates/includes/base.html
+++ b/food/templates/includes/base.html
@@ -13,6 +13,19 @@
     <title>Hello, world!</title>
   </head>
   <body>
+
+    <nav class="navbar navbar-dark bg-dark">
+
+        <a href="#" class="navbar-brand">FoodApp</a>
+
+        <div class="navbar">
+            <a href="#" class="nav-item nav-link">Add Item</a>
+            <a href="#" class="nav-item nav-link">Delete Item</a>
+            <a href="#" class="nav-item nav-link">View Item</a>
+        </div>
+        
+    </nav>
+
     {% block content %}
     {% endblock %}
 
