--- a/food/templates/index.html
+++ b/food/templates/index.html
@@ -1,28 +1,23 @@
-
-
-
-
-
 {% extends 'includes/base.html' %}
 
 {% block content %}
 
-<div class="container">
-	<br>
-	<div class="w-25 p-3">
-		{% for item in items %}
+	{% for item in items %}
 
-			<ul class="list-group">
-				<li class="list-group-item bg-light">
-					<a href="{% url 'food:details' item.id %}">{{item.item_name}} : ${{item.item_price}}</a>
-				</li>
-			</ul>
+		<div class="row py-3">
+			<div class="col-md-3 offset-2">
+				<img src="{{ item.item_image }}" class="card" height="150px" />
+			</div>
+			<div class="col-md-4">
+				<h3>{{ item.item_name }}</h3>
+				<h5>{{ item.item_desc }}</h5>
+				<h6>${{ item.item_price }}</h6>
+			</div>
+			<div class="col-md-2">
+				
+			</div>
+		</div>
 
-		{% endfor %}
-	</div>
-
-</div>
-
-
+	{% endfor %}
 
 {% endblock %}
