--- a/food/templates/includes/base.html
+++ b/food/templates/includes/base.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
-    <title>Hello, world!</title>
+    <title>FoodApp</title>
   </head>
   <body>
 
@@ -26,8 +26,15 @@
         
     </nav>
 
+    <br>
+    <div class="container">
+
+        
     {% block content %}
     {% endblock %}
+        
+    </div>
+
 
     <!-- Optional JavaScript; choose one of the two! -->
 
