--- a/food/templates/includes/base.html
+++ b/food/templates/includes/base.html
@@ -16,7 +16,7 @@
 
     <nav class="navbar navbar-dark bg-dark">
 
-        <a href="#" class="navbar-brand">FoodApp</a>
+        <a href="{% url 'index' %}" class="navbar-brand">FoodApp</a>
 
         <div class="navbar">
             <a href="#" class="nav-item nav-link">Add Item</a>
