--- a/food/templates/details.html
+++ b/food/templates/details.html
@@ -2,14 +2,20 @@
 
 {% block content %}
 
-<div class="container">
-	<br>
-	<h1>{{ item.item_name }}</h1>
+<!-- 	<h1>{{ item.item_name }}</h1>
 	<h2>{{ item.item_desc }}</h2>
 	<h3>${{ item.item_price }}</h3>
-
-</div>
-
+ -->
+	<div class="row py-3">
+		<div class="col-md-6">
+			<img src="{{ item.item_image }}" class="card" height="350px" width="450px" />
+		</div>
+		<div class="col-md-6">
+			<h1>{{ item.item_name }}</h1>
+			<h2>{{ item.item_desc }}</h2>
+			<h3>${{ item.item_price }}</h3>
+		</div>
+	</div>
 
 
 {% endblock %}
