--- a/food/templates/index.html
+++ b/food/templates/index.html
@@ -5,16 +5,17 @@
 	{% for item in items %}
 
 		<div class="row py-3">
-			<div class="col-md-3 offset-2">
-				<img src="{{ item.item_image }}" class="card" height="150px" />
+			<div class="col-md-3"></div>
+			<div class="col-md-2.5">
+				<img src="{{ item.item_image }}" class="card" height="150px" width="200px" />
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-2">
 				<h3>{{ item.item_name }}</h3>
 				<h5>{{ item.item_desc }}</h5>
 				<h6>${{ item.item_price }}</h6>
 			</div>
-			<div class="col-md-2">
-				
+			<div class="col-md-3">
+				<a href="{% url 'details' item.id %}" class="btn btn-success">Details</a>
 			</div>
 		</div>
 
