--- a/food/templates/includes/base.html
+++ b/food/templates/includes/base.html
@@ -14,12 +14,13 @@
   </head>
   <body>
 
+
     <nav class="navbar navbar-dark bg-dark">
 
         <a href="{% url 'index' %}" class="navbar-brand">FoodApp</a>
 
         <div class="navbar">
-            <a href="#" class="nav-item nav-link">Add Item</a>
+            <a href="{% url 'create_item' %}" class="nav-item nav-link">Add Item</a>
             <a href="#" class="nav-item nav-link">Delete Item</a>
             <a href="#" class="nav-item nav-link">View Item</a>
         </div>
